lab-03-kubernetes/policies/02_trusted_registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: trusted-registry
  annotations:
    policies.kyverno.io/title: "Сезон 3, Эпизод 2: Таможня Контейнерного Порта"
    policies.kyverno.io/description: >-
      Тотальный пограничный контроль на въезде в рантайм. В кластер допускаются только проверенные и одобренные Гофер-паспорта: официальные докер-образы из docker.io/library (nginx, postgres) и наши легальные локальные сборки shop-api, shop-worker и api-slim. Любая попытка протащить контрабанду из серых, личных или сторонних реестров жестко пресекается.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-trusted-registry
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Контрабанда обнаружена! Таможня Гофера объявляет план 'Перехват'. Вы пытаетесь задеплоить под из серого реестра. Доступ разрешен только официальным образам docker.io/library/* и нашим родным локальным сборкам shop-api, shop-worker, api-slim. Нелегальные контейнеры депортированы из кластера!"
        pattern:
          spec:
            containers:
              - image: "docker.io/library/* | shop-api* | shop-worker* | api-slim*"
