lab-03-kubernetes/policies/03_require_labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: "Сезон 3, Эпизод 3: Паспортный Стол Гофер-Тауна"
    policies.kyverno.io/description: >-
      Каждый под обязан носить два клейма: app (к какому сервису относится) и owner (кто отвечает за деплой). Без меток невозможно построить селекторы Service, настроить ServiceMonitor и понять, чей под упал в три часа ночи.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-required-labels
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Гофер потерял клеймо! Каждый под обязан иметь метки app и owner. Без них ты никто в этом кластере - ни Service тебя не найдёт, ни Prometheus не увидит. Срочно предъявите документы!"
        pattern:
          metadata:
            labels:
              app: "?*"
              owner: "?*"
